greentea-dc.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: twowayssl
    name: twowayssl
    namespace: rhelnginx
  spec:
    replicas: 1
    selector:
      app: twowayssl
    strategy:
      type: Rolling
    template:
      metadata:
        labels:
          app:  twowayssl
      spec:
        containers:
          - 
            image: 172.30.163.234:5000/rhelnginx/greentea-nginx
            name: twowayssl
            ports:
              - 
                containerPort: 443
                protocol: TCP
    triggers:
      - 
        type: ConfigChange
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: twowayssl
    name: twowayssl
    namespace: rhelnginx
  spec:
    ports:
    - name: 443-tcp
      port: 443
      protocol: TCP
      targetPort: 443
    selector:
      app: twowayssl
      deploymentconfig: twowayssl
  status:
    loadBalancer: {}
