greentea-route.yaml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: twowayssl
  name: twowayssl
  namespace: rhelnginx
spec:
  host: clisec.rhel-cdk.10.1.2.2.xip.io
  port:
    targetPort: 443-tcp
  tls:
    termination: passthrough
  to:
    kind: Service
    name: twowayssl
